--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "lint": "eslint --ext .js,.vue src",
     "dev": "webpack --config ./build/webpack.dev.js --hide-modules",
+    "debug": "webpack --config ./build/webpack.dev.js --hide-modules",
     "build": "webpack --config ./build/webpack.prod.js -p --progress  --hide-modules --colors"
   },
   "devDependencies": {
@@ -47,8 +48,8 @@
     "url-loader": "^0.6.2",
     "vue-loader": "^14.1.1",
     "vue-template-compiler": "^2.5.13",
-    "wcer": "^1.0.3",
     "webpack": "^3.8.1",
+    "webpack-chrome-extension-reloader": "^1.3.0",
     "webpack-merge": "^4.1.1",
     "zip-webpack-plugin": "^2.1.0"
   }
