--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "cross-env": "^5.2.0",
     "element-ui": "^2.0.1",
     "lodash": "^4.17.4",
-    "material-design-icons-iconfont": "^4.0.5",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuetify": "^1.5.13",
@@ -21,6 +20,7 @@
     "build": "webpack --config ./build/webpack.prod.js -p --progress  --hide-modules --colors"
   },
   "devDependencies": {
+    "@mdi/font": "^3.6.95",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.2",
     "babel-loader": "^7.1.2",
