--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuetify": "^1.5.13",
-    "wcer": "^1.0.3"
+    "wcer": "^1.0.3",
+    "webpack-chrome-extension-reloader": "^1.3.0"
   },
   "scripts": {
     "lint": "eslint --ext .js,.vue src",
@@ -38,20 +39,21 @@
     "eslint-plugin-node": "^6.0.0",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "mini-css-extract-plugin": "^0.4.4",
     "file-loader": "^1.1.8",
     "friendly-errors-webpack-plugin": "^1.6.1",
-    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.7.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "pug": "^2.0.0-rc.4",
     "pug-loader": "^2.3.0",
     "sass-loader": "^6.0.6",
     "url-loader": "^0.6.2",
-    "vue-loader": "^14.1.1",
+    "vue-loader": "^15.7.0",
     "vue-template-compiler": "^2.5.13",
-    "webpack": "^3.8.1",
+    "webpack": "^4.20.2",
     "webpack-merge": "^4.1.1",
+    "webpack-cli": "^3.1.2",
     "zip-webpack-plugin": "^2.1.0"
   }
 }
