--- a/src/manifest.json
+++ b/src/manifest.json
@@ -8,7 +8,7 @@
         "128": "icons/128.png"
     },
     "permissions": [
-        "<all_urls>",
+        "http://blank.org/*",
         "*://*/*",
         "activeTab",
         "tabs",
@@ -33,8 +33,7 @@
             ],
             "run_at": "document_end",
             "matches": [
-                "*://blank.org/",
-                "<all_urls>"
+                "*://blank.org/"
             ],
             "all_frames": true
         }
