--- a/src/manifest.json
+++ b/src/manifest.json
@@ -8,7 +8,6 @@
         "128": "icons/128.png"
     },
     "permissions": [
-        "http://blank.org/*",
         "*://*/*",
         "activeTab",
         "tabs",
@@ -33,7 +32,8 @@
             ],
             "run_at": "document_end",
             "matches": [
-                "*://blank.org/"
+                "*://blank.org/",
+                "*://*.pinnacle.com/*"
             ],
             "all_frames": true
         }
