--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "cross-env": "^5.2.0",
     "lodash": "^4.17.4",
+    "moment": "^2.24.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuetify": "^1.5.13",
@@ -39,10 +40,10 @@
     "eslint-plugin-node": "^6.0.0",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
-    "mini-css-extract-plugin": "^0.4.4",
     "file-loader": "^1.1.8",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.4",
     "node-sass": "^4.7.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "pug": "^2.0.0-rc.4",
@@ -52,8 +53,8 @@
     "vue-loader": "^15.7.0",
     "vue-template-compiler": "^2.5.13",
     "webpack": "^4.20.2",
-    "webpack-merge": "^4.1.1",
     "webpack-cli": "^3.1.2",
+    "webpack-merge": "^4.1.1",
     "zip-webpack-plugin": "^2.1.0"
   }
 }
