--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "cross-env": "^5.2.0",
     "css-reset-and-normalize": "^2.0.1",
     "lodash": "^4.17.4",
+    "luxon": "^1.13.0",
     "material-icons-font": "^1.4.2",
-    "moment": "^2.24.0",
     "postcss-loader": "^3.0.0",
     "postcss-parent-selector": "^1.0.0",
     "vue": "^2.5.2",
