--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "apexcharts": "^3.6.11",
     "cross-env": "^5.2.0",
     "css-reset-and-normalize": "^2.0.1",
     "lodash": "^4.17.4",
@@ -14,6 +15,7 @@
     "postcss-loader": "^3.0.0",
     "postcss-parent-selector": "^1.0.0",
     "vue": "^2.5.2",
+    "vue-apexcharts": "^1.3.5",
     "vue-router": "^3.0.1",
     "vuetify": "^1.5.13",
     "wcer": "^1.0.3",
