--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "postcss-parent-selector": "^1.0.0",
     "vue": "^2.5.2",
     "vue-apexcharts": "^1.3.5",
+    "vue-functional-calendar": "^2.5.0",
     "vue-router": "^3.0.1",
     "vuetify": "^1.5.13",
     "wcer": "^1.0.3",
